test/typecheck/errors/bad-views21.boa
o: output sum of int;

v1: table[year: int][projectID: string][fileName: string] of temp:int;

r1: v1._row;

while (2 >> 1 >> v1 + 4) {
	o << 1;
}
